--- a/public/styles/sass/styles.scss
+++ b/public/styles/sass/styles.scss
@@ -144,6 +144,21 @@ body {
 //       RESPONSIVE
 // **********************
 @media screen and (max-width: 941px){
+	// .logoPull{@include transform(translateX, -120%);}
+	// .menuToggle{display: block;}
+	// .resSubDisp{display: block !important;}
+	.header{
+		#nav{
+			//#dLogo{@include transform(translateX, -120%);}
+			ul{
+				li{
+					a{padding: 0 10px;}
+				}
+			}
+		}
+	}
+}
+@media screen and (max-width: 768px){
 	.logoPull{@include transform(translateX, -120%);}
 	.menuToggle{display: block;}
 	.resSubDisp{display: block !important;}
